# pyrite

./: .gitignore  LICENSE  README.md  pyproject.toml
pyrite/: __init__.py  __main__.py  config.py  irc.py
